# phenotype-infra

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .vale.ini  A-01_VALIDATION.md  A-02_VALIDATION.md  A-03_VALIDATION.md  A-04_VALIDATION.md  A-05_KNOWN_ISSUES.md  A-05_VALIDATION.md  A-06_VALIDATION.md  A-07_VALIDATION.md  A-08_VALIDATION.md  A-10_VALIDATION.md  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  SETUP_STEPS.md  _check_readmes.ps1  _crates.txt  _oci_build2.txt  audit-stale-branches-2026-06-29.json  audit_scorecard.json  clippy.toml  deny.toml  docker-compose.yml  grade.sh  lefthook.yml  railway.toml  rustfmt.toml  (+2 more)
crates/credential-manager/: Cargo.toml  test_vault.json
crates/credential-manager/src/: config.rs  crypto.rs  error.rs  lib.rs  oauth.rs  vault.rs
crates/kodevibego-ffi/: Cargo.toml  build.rs
crates/kodevibego-ffi/src/: ffi.rs  lib.rs
crates/kvirtual/: Cargo.toml
crates/kvirtual/src/: cli.rs  completion.rs  config.rs  container.rs  credentials.rs  desktop.rs  error.rs  history.rs  lib.rs  main.rs  record.rs  scripting.rs  session.rs  tui.rs  vm.rs
crates/kvirtualdesktop-core/: Cargo.toml
crates/kvirtualdesktop-core/src/: error.rs  lib.rs  protocol.rs  security.rs  transport.rs  types.rs
crates/kvirtualdesktop-mcp-server/: Cargo.toml
crates/kvirtualdesktop-mcp-server/src/: lib.rs  main.rs  server.rs
crates/nanovms-core/: Cargo.toml  Makefile  Taskfile.yml  build.rs  go.mod
crates/nanovms-core/bindings/go-c-export/: nvms_core.go
crates/nanovms-core/cmd/nanovms/: main.go
crates/nanovms-core/cmd/nvms/: main.go
crates/nanovms-core/docs/: implementation-roadmap.md
crates/nanovms-core/docs/.vitepress/: config.mts
crates/nanovms-core/docs/adr/: ADR-001-language-selection.md  ADR-004-storage-architecture.md  ADR-005-networking-architecture.md  ADR-007-testing-strategy.md  ADR-010-security-model.md  ADR-011-observability-stack.md  ADR-012-multi-tenancy.md
crates/nanovms-core/docs/guide/: index.md
crates/nanovms-core/docs/guides/: quickstart.md
crates/nanovms-core/docs/journeys/: agent-desktop.md  game-automation.md  gpu-passthrough.md  index.md  quick-start.md
crates/nanovms-core/docs/reference/: api.md  architecture.md  benchmarks.md  cli.md  configuration.md
crates/nanovms-core/docs/sessions/20260428-taskfile-language-detection/: 00_SESSION_OVERVIEW.md  01_RESEARCH.md
crates/nanovms-core/docs/stories/: agent-desktop.md  create-first-vm.md  hello-world.md  index.md  run-game-tests.md  setup-gpu-passthrough.md
crates/nanovms-core/internal/adapters/linux/: linux.go  syscall_smoke_test.go  (+1 more)
crates/nanovms-core/internal/config/: config.go  config_test.go
crates/nanovms-core/internal/domain/: sandbox.go  sandbox_test.go  stubs.go
crates/nanovms-core/internal/ports/: ports.go  stubs.go
crates/nanovms-core/pkg/config/: config.go  config_test.go
crates/nanovms-core/pkg/deploy/: deploy.go
crates/nanovms-core/pkg/orchestrate/: orchestrate.go
crates/nanovms-core/pkg/pheno-integration/: integration.go  integration_test.go
crates/nanovms-core/pkg/resilience/: resilience.go  resilience_test.go
crates/nanovms-core/pkg/runtime/: runtime.go
crates/nanovms-core/pkg/tier/: firecracker.go  gvisor.go  wasm.go
crates/nanovms-core/pkg/validate/: validate.go
crates/nanovms-core/src/: lib.rs
crates/nanovms-core/tests/bdd/: tier-isolation.feature
crates/nanovms-core/tests/playwright/: package.json
crates/nvms-ffi/: Cargo.toml  build.rs
crates/nvms-ffi/src/: lib.rs
crates/pheno-compose/: Cargo.toml
crates/pheno-compose/src/: config.rs  errors.rs  health.rs  instance.rs  lib.rs
crates/pheno-config/: Cargo.toml
crates/pheno-config/src/: lib.rs
crates/thegent-utils/: Cargo.toml
crates/thegent-utils/src/: lib.rs
iac/: Cargo.toml  README.md  deny.toml
iac/.grade-reports/: A25-orphaned-scripts-audit.md  A26-orphaned-configs-audit.md  build.raw  fmt.raw  grade.json  test-unit.raw
iac/ansible/: README.md  inventory.yml.example
iac/ansible/group_vars/: oci_primary.yml.example
iac/ansible/playbooks/: common.yml  install-caddy.yml  install-cloudflared.yml  install-forgejo.yml  install-gitea-runner.yml  install-tailscale.yml  install-vaultwarden.yml  install-woodpecker.yml  oci-baseline.yml  site.yml
iac/ansible/playbooks/templates/: caddyfile.j2  cloudflared-config.yml.j2  forgejo-app.ini.j2
iac/archive/: README.md
iac/archive/scripts/: README.md  health-check.sh  install-windows-runner.ps1  register-home-runner.sh
iac/data/: billing-blocked-rules.json
iac/landing-bootstrap/: Cargo.toml  README.md
iac/landing-bootstrap/src/: main.rs
iac/landing-bootstrap/templates/governance/: LICENSE.MIT  dependabot.yml
iac/observability/: Cargo.toml
iac/observability/src/: lib.rs
iac/oci-helpers/: Cargo.toml
iac/oci-helpers/src/: lib.rs
iac/oci-lottery/: Cargo.toml  README.md
iac/oci-lottery/src/: config.rs  hooks.rs  main.rs  oci.rs  state.rs
iac/oci-post-acquire/: Cargo.toml  oci-post-acquire.sh
iac/oci-post-acquire/hooks.d.example/: 10-update-portfolio-card.sh  README.md
iac/oci-post-acquire/src/: cf.rs  hooks.rs  main.rs  mesh.rs  tailscale.rs
iac/phenotype-logging-stub/: Cargo.toml
iac/phenotype-logging-stub/src/: lib.rs
iac/scripts/: README-windows-runner.md  README.md  bootstrap-oci.sh  install-windows-runner.ps1  restore-rulesets.rs
iac/tailscale/: acl.json  apply-acl.sh
iac/tailscale/tailscale-keygen/: Cargo.toml
iac/tailscale/tailscale-keygen/src/: main.rs
iac/terraform/: README.md  providers.tf  tailscale.tf
iac/terraform/aws/: lambda-webhook.tf
iac/terraform/cloudflare/: tunnel.tf  versions.tf  workers.tf
iac/terraform/gcp/: e2-micro.tf
iac/terraform/oci/: README.md  ampere-primary.tf  ampere-secondary.tf
tests/: Cargo.toml  integration_test.rs
tools/byteport/crates/integration/: Cargo.toml
tools/iac-plan-viewer/: .gitignore  Cargo.toml  Makefile
tools/iac-plan-viewer/src/: lib.rs
tools/iac-plan-viewer/www/: index.html  sample-plan.json
(+685 files in other folders)
