[workspace]
resolver = "2"

# =============================================================================
# phenotype-infra — Compute/Infra Consolidation Monorepo
# =============================================================================
#
# IaC sub-crates (OCI provisioning, Tailscale, mesh).
# Tooling sub-projects live under tools/ and are NOT workspace members
# (they use their own build systems).
# =============================================================================

members = [
    "iac/oci-lottery",
    "iac/oci-post-acquire",
    "iac/tailscale/tailscale-keygen",
]

exclude = [
    # `landing-bootstrap` declares its own [workspace] table (intentionally
    # detached — see its Cargo.toml) and uses a different dependency style
    # (`ureq` instead of `reqwest`). It is built and released independently; do
    # not pull it into this workspace.
    "iac/landing-bootstrap",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Phenotype Infra <infra@phenotype.dev>"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "process", "signal", "time", "fs", "net", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
glob = "0.3"
rand = "0.10"
