[workspace]
resolver = "2"
members = [
    "oci-lottery",
    "oci-post-acquire",
    "tailscale/tailscale-keygen",
]
# `landing-bootstrap` declares its own `[workspace]` table (intentionally
# detached — see its Cargo.toml) and uses a different dependency style
# (`ureq` instead of `reqwest`). It is built and released independently; do
# not pull it into this workspace.
exclude = [
    "landing-bootstrap",
]

# Shared dependency versions for the iac/* Rust crates.
# Member Cargo.toml files may opt in via `dep = { workspace = true, features = [...] }`.
[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Phenotype Infra <infra@phenotype.dev>"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "process", "signal", "time", "fs", "net", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
glob = "0.3"
rand = "0.8"
