# This file kept as marker; workspace is governed by root Cargo.toml.
# Member crates: oci-lottery, oci-post-acquire, tailscale/tailscale-keygen
#
# Shared dependency versions for the iac/* Rust crates are defined in
# root [workspace.dependencies]; member Cargo.toml files opt in via
# `dep = { workspace = true, features = [...] }`.
