[package]
name = "credential-manager"
version = "0.1.0"
edition = "2021"
description = "Credential manager — absorbed from KVirtualStage (Phase-1-Absorption)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/phenotype-infra"
authors = ["kooshapari"]
publish = false

[lib]
name = "credential_manager"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
