[package]
name = "credential-manager"
version = "0.1.0"
edition = "2021"
description = "Credential manager — absorbed from KVirtualStage credential_manager crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/phenotype-infra"
authors = ["kooshapari"]
publish = false

[lib]
name = "credential_manager"
path = "src/lib.rs"

[features]
default = []
oauth2 = ["dep:reqwest"]
full = ["oauth2"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true, features = ["serde"] }
rand = { workspace = true }
base64 = "0.22"
zeroize = "1.6"
sha2 = "0.10"
aes-gcm = "0.10"
argon2 = "0.5"
uuid = { workspace = true, features = ["v4", "serde"] }

# Optional — OAuth2 with HTTP client
reqwest = { workspace = true, features = ["json", "rustls-tls"], optional = true }

[dev-dependencies]
tempfile = "3"
