[package]
name = "kvirtualdesktop-mcp-server"
version = "0.1.0"
edition = "2021"
description = "MCP server implementation for KVirtualDesktop — absorbed from _tmp_kvirtualstage/kvirtualdesktop-mcp-server"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/phenotype-infra"
publish = false

[dependencies]
kvirtualdesktop-core = { path = "../kvirtualdesktop-core" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
clap = { workspace = true }
