[package]
name = "nanovms-core"
version = "0.1.0"
edition = "2021"
description = "NVMS 3-tier isolation Go core — built as C static archive"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/phenotype-infra"
authors = ["kooshapari"]
publish = false

[lib]
name = "nanovms_core"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
