[package]
name = "nvms-ffi"
version = "0.1.0"
edition = "2021"
description = "Rust FFI bindings to NVMS Go Core"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/phenotype-infra"
documentation = "https://docs.rs/nvms-ffi"
keywords = ["phenotype", "pheno-compose", "ffi"]
categories = ["api-bindings"]
authors = ["kooshapari"]

[dependencies]
thiserror = { workspace = true }

[build-dependencies]
cc = "1"

[features]
default = []
cuda = []  # Enable CUDA support for ML workloads

[dev-dependencies]

[profile.release]
lto = "thin"

[lib]
name = "nvms_ffi"
crate-type = ["staticlib", "cdylib", "rlib"]
