[package]
name = "phenotype-infra-observability"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "T22 observability init for phenotype-infra iac/* daemons (ADR-036 pheno-tracing)."

[dependencies]
pheno-tracing = { git = "https://github.com/KooshaPari/pheno-tracing", branch = "main" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
phenotype-logging = { path = "../../../phenoShared-wtrees/version-align-latest-tag/crates/phenotype-logging" }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "test-util"] }
