[package]
name = "oci-helpers"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared helpers for OCI operational crates (oci-lottery, oci-post-acquire)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
