[package]
name = "oci-lottery"
version = "0.1.0"
edition = "2024"
description = "OCI Always-Free A1.Flex capacity lottery daemon — polls oci compute instance launch across regions until capacity is granted."
license = "MIT OR Apache-2.0"
authors = ["Phenotype Infra <infra@phenotype.dev>"]

[[bin]]
name = "oci-lottery"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "process", "signal", "time", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
