[package]
name = "oci-lottery"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "OCI Always-Free A1.Flex capacity lottery daemon — polls oci compute instance launch across regions until capacity is granted."

[[bin]]
name = "oci-lottery"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
