[package]
name = "oci-post-acquire"
version = "0.1.0"
edition = "2024"
description = "Universal post-acquire hook chain — provisions a freshly-won OCI Always-Free instance into the Phenotype mesh end-to-end (SSH wait → Tailscale enroll → Ansible baseline → Cloudflare DNS → mesh-state commit → notify → downstream hooks)."
license = "MIT OR Apache-2.0"
authors = ["Phenotype Infra <infra@phenotype.dev>"]

# Sibling to `oci-lottery` (feat/oci-lottery-daemon). Kept as an independent crate
# so the two PRs do not race on `Cargo.toml`. Once both land on `main`, a
# follow-up may merge them under a single workspace.

[[bin]]
name = "oci-post-acquire"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "process", "time", "fs", "net", "io-util"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
