[package]
name = "tailscale-keygen"
version = "0.1.0"
edition = "2024"
description = "Mint ephemeral, single-use, tagged Tailscale auth-keys for unattended node enrollment (consumed by oci-post-acquire and other mesh-bootstrap hooks)."
license = "MIT OR Apache-2.0"
authors = ["Phenotype Infra <infra@phenotype.dev>"]

# Sibling to `oci-post-acquire`. Kept as an independent crate so the post-acquire
# hook can `cargo run -p tailscale-keygen` (or just shell out to the built
# binary) without pulling in unrelated dependencies.

[[bin]]
name = "tailscale-keygen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
